ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  # ingressClassName: nginx
  # defaultBackend:
  #   service:
  #     name: hello-scg-app
  #     port:
  #       number: 80
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
